# cookietuner

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: api.md  index.md  installation.md  usage.md
src/cookietuner/: __init__.py  chrome.py  cli.py  models.py  safari.py
tests/: test_chrome.py  test_safari.py
