[project]
name = "cookietuner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Poblador i Garcia", email = "david@poblador.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
]

[project.scripts]
cookietuner = "cookietuner:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
