[project]
name = "cookietuner"
version = "0.1.0"
description = "Extract and display cookies from macOS browsers (Chrome, Safari)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "David Poblador i Garcia", email = "david@poblador.com" }
]
requires-python = ">=3.14"
keywords = ["cookies", "browser", "chrome", "safari", "macos", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=46.0.3",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/alltuner/cookietuner"
Documentation = "https://cookietuner.alltuner.com"
Repository = "https://github.com/alltuner/cookietuner"
Issues = "https://github.com/alltuner/cookietuner/issues"

[project.scripts]
cookietuner = "cookietuner:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "prek>=0.3.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
